--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - add a --watch option to run in the background and package when a file is saved
 - not working when invoked from outside the pakman dir (visitors can't be found, neither custom ones, nor the pakman default ones)
+- configure built-in visitors just by their names, other custom visitors by path
