--- a/TODO
+++ b/TODO
@@ -1,1 +1,1 @@
-- add a --watch option to run in the background and package when a file is saved
+- add a --watch option to run in the background and package when a file is saved (fs.watch doesn's work that great ...)
