--- a/TODO
+++ b/TODO
@@ -1,1 +1,4 @@
 - add a --watch option to run in the background and package when a file is saved (fs.watch doesn's work that great ...)
+- yaml configuration file
+- command line `pakman` rather than node path/to/pakman
+- npm dependencies
