--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@
 - Put in place custom visitors args from the command line: something like -Dkey1=value1 -Dkey2=value2 etc...
 - Do the same from the config itself, dedicated place in the config to store custom args, and the custom args from the command line will come in the same object too (even if conceptually, the whole config object is open)
 - if destination is provided but not packages are there, assume "pakman.js": {files: {includes: ["**/*"]}}
+- stats visitor, runs onEnd, outputs a txt file containing stats about the packaged files, how many pakaged files, their size (normal and gzipped), how many files are inside each package (sizes), ...
